<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cookorama</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="password_forgotten">Forgot your password?</string>
    <string name="trademark">© 2023 - Cookorama</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="recipe">Recipe</string>
    <string name="recipes">Recipes</string>
    <string name="titleRecipes">👨‍🍳~ Recipes ~👩‍🍳</string>
    <string name="shop">Shop</string>
    <string name="article">Article</string>
    <string name="articles">Articles</string>
    <string name="titleArticles">🛒~ Articles ~ 🛒</string>
    <string name="profile">Profile</string>
    <string name="courses">Courses</string>
    <string name="titleCourses">📙~ Courses ~ 📙</string>
    <string name="event">Event</string>
    <string name="events">Events</string>
    <string name="titleEvents">🎪 ~ Events ~ 🎪</string>
    <string name="birthday">Birthday :</string>
    <string name="profileSignUpDate">Sign-Up date :</string>
    <string name="profileFidelityPoints">Fidelity Points :</string>
    <string name="upcomingEvents">🎪 ~ Upcoming events ~ 🎪</string>
    <string name="noEventsToday">No events today…</string>
    <string name="no_items_found">No items found</string>

    <string name="email_empty_error">Email cannot be empty</string>
    <string name="pwd_empty_error">Password cannot be empty</string>
    <string name="connexionErrorTitle">Connexion ERROR</string>
    <string name="connexionErrorMessage">There seems to be a problem with yout connection.\nPlease Check your connection and retry.</string>

    <string name="returnToShop">Return to shop</string>
    <string name="no_browser_error">No browser found.\nPlease verify that your device has a usable browser or download one.\nOtherwise use another device and go to this adress :</string>
    <string name="DisconnectArrow"><![CDATA[->]]></string>
    <string name="disconnectTitle">Disconnection</string>
    <string name="disconnectMessage">Are you sure you want to disconnect ?</string>
    <string name="disconnect">Disconnect</string>
    <string name="cancelButton">Cancel</string>
    <string name="edit_profile">Edit your profile\n</string>
    <string name="first_name">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="current_password">Curent password</string>
    <string name="new_password">New password</string>
    <string name="passwords_not_matching">Password and confirmation must match</string>
    <string name="password_required">Current password is empty or incorrect</string>
    <string name="password_not_secure">New password does not meet requiered conditions.\nMust have :\n-2 lowercase letters\n-2 uppercase letters\n-2 numbers\n-2 special characters</string>
    <string name="password_update_failed">A problem as occured while updating your password.\nPlease try again later.</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="infos_updated_successfully">"Your informations have been successfully updated.\nPlease press return to go back. "</string>
    <string name="goBack">Return</string>
    <string name="fatal_error">Fatal ERROR</string>
    <string name="fatal_error_occured">A fatal error has occured.\nWe are sorry for the inconvinience.\nPlease restart the app.</string>
    <string name="ok">OK</string>
    <string name="title_activity_memory_game">MemoryGameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="secret_memory_game">Secret memory game</string>
    <string name="timer">Timer :</string>
    <string name="points" />
    <string name="startTimer" />
    <string name="finished_game">Well played ! You scored %d points</string>
    <string name="done">Done !</string>
    <string name="times_up">Time\'s up ! You scored %d points.</string>
    <string name="wrong">Wrong !</string>
    <string name="welcome_memory">Welcome to the Memory Game</string>
    <string name="rules_memory">\"Welcome to the memory game! You have 3 seconds to memorize the images. After that, you will have to find the pairs. Good luck!\"</string>
    <string name="finished_game_title">Game over !</string>
    <string name="nfc_not_available">NFC not available or not enabled</string>

</resources>