<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity"
    android:background="@color/salmon"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:hint="@string/first_name"
            android:textSize="20sp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:id="@+id/editFirstname"
            android:background="@drawable/edit_text_rounded"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/lastname"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:hint="@string/lastname"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:id="@+id/editLastname"
            android:background="@drawable/edit_text_rounded"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:id="@+id/editEmail"
            android:background="@drawable/edit_text_rounded"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/birthday"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:hint="@string/birthday"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:inputType="date"
            android:id="@+id/editBday"
            android:background="@drawable/edit_text_rounded"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/current_password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:hint="@string/password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:id="@+id/currentPassword"
            android:background="@drawable/edit_text_rounded"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:hint="@string/new_password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:id="@+id/newPasswordConfirm"
            android:background="@drawable/edit_text_rounded"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/passwordConfirm"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:hint="@string/passwordConfirm"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:id="@+id/editPasswordConfirm"
            android:background="@drawable/edit_text_rounded"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/saveButton"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/mustardYellow"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goBack"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/cancelButton"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/red"
        />


</LinearLayout>