<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <include layout="@layout/loading_animation" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/salmon"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/salmon"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="true"
                android:textSize="32dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/lightGray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/login"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:paddingTop="130dp"
                android:paddingLeft="30dp">
            </TextView>
            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:hint="@string/email"
                android:inputType="text"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_rounded"
                android:textSize="24dp"
                android:gravity="center"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/lightGray"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="@string/password"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:paddingTop="20dp"
                android:paddingLeft="10dp">
            </TextView>
            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:hint="@string/password"
                android:gravity="center"
                android:textSize="24dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_rounded">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingBottom="75dp"
            android:background="@color/lightGray">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:background="@drawable/general_button"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/loginBtn">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_forgotten"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:background="@drawable/general_button"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/pwdResetBtn">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trademark"
                android:layout_gravity="start|center"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>