<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShopFragment"
    android:background="@color/salmon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textSize="36sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_condensed"
                android:gravity="center"
                android:paddingTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:paddingTop="30dp">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:id="@+id/ShopGeneralFiltersSpinner"
                    android:background="@drawable/shop_filter_button"
                    android:layout_margin="10dp"
                    android:spinnerMode="dropdown"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:id="@+id/shopSearchBar"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <include layout="@layout/loading_animation" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:id="@+id/shopRecyclerView"
                >

            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_items_found"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_condensed"
                android:gravity="center"
                android:id="@+id/noItemsFound"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/footer_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
    </include>
</LinearLayout>